--- a/styles.css
+++ b/styles.css
@@ -341,8 +341,52 @@ main {
   }
   
   img.thumbnail-1 {
-    width: 10rem;
+    width: 18rem;
   }
   .circle-img2 {
     width: 9rem;   
   }
+
+  /* Video */
+
+  .Most-popular-tutorials {
+    padding: 1rem;
+    position: relative;
+  }
+
+  .carousel-control-prev-2 {
+    background-image: url("./assets/images/arrow_black_left.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20rem;
+    color: gray;
+    position: absolute;
+    top:128px;
+  }
+  
+  .carousel-control-next-2 {
+    background-image: url("./assets/images/arrow_black_right.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20rem;
+    position: absolute;
+    top:128px;
+    right: 0;
+  }
+  
+  
+  img.small-img {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+  
+  img.play-btn {
+    height: 3.5rem;
+    margin: 2.4rem 4.5rem;
+  }
+  
+  img.smile-logo {
+    width: 3.5rem;
+  }
+  
+  
