--- a/styles.css
+++ b/styles.css
@@ -411,4 +411,23 @@ main {
     font-weight:500;
     text-align: center;
   }
+
+  footer {
+    bottom: 0;
+  }
+  
+  footer .social {
+    margin-top: -15px;
+    width: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-white);
+}
+
+footer .social span{
+    font-size: 40px;
+    margin: 3px;
+}
   
